--- a/app/templates/inventory/shorten.html
+++ b/app/templates/inventory/shorten.html
@@ -77,8 +77,7 @@
                                 <div class="col-md-6">
                                     <strong>Current Length:</strong> <span id="current-length">-</span> in<br>
                                     <strong>Location:</strong> <span id="item-location">-</span><br>
-                                    <strong>Status:</strong> <span id="item-status">-</span><br>
-                                    <strong>Quantity:</strong> <span id="item-quantity">-</span>
+                                    <strong>Status:</strong> <span id="item-status">-</span>
                                 </div>
                             </div>
                         </div>
