--- a/app/templates/inventory/edit.html
+++ b/app/templates/inventory/edit.html
@@ -4,6 +4,9 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2><i class="bi bi-pencil"></i> Edit Inventory Item: {{ item.ja_id }}</h2>
     <div class="btn-group">
+        <button type="button" class="btn btn-outline-primary" id="duplicate-item-btn" data-ja-id="{{ item.ja_id }}">
+            <i class="bi bi-files"></i> Duplicate Item
+        </button>
         <button type="button" class="btn btn-outline-warning" onclick="showItemHistory('{{ item.ja_id }}')">
             <i class="bi bi-clock-history"></i> View History
         </button>
